# plebiscite

./: .env  .gitignore  Cargo.toml  Trunk.toml
client-sycamore/: Cargo.toml  Trunk.toml
client-sycamore/src/: login.html  main.rs
client-webapi/: Cargo.toml
client-webapi/src/: lib.rs
client/leptos/: Cargo.toml  Trunk.toml
client/leptos/src/: index.html  login.html  main.rs
client/sycamore/: Cargo.toml
client/sycamore/src/: index.html  login.html  main.rs
client/webapi/: Cargo.toml
client/webapi/src/: internal.rs  lib.rs
db/: init_data.pgsql  initdb.pgsql
db-postgres/: init_funcs.pgsql  initdb.pgsql
server-actix/: Cargo.toml
server-actix/src/: db_driver.rs  main.rs  session.rs
server-actix/src/db_driver/: macros.rs  mod.rs
types/: Cargo.toml
types/src/: lib.rs  object_id.rs
