[package]
name = "plebiscite"
version = "0.1.0"
edition = "2021"
default-run = "server"


[features]
frontend = []


[[bin]]
name = "server"
path = "src/bin/server/main.rs"


[[bin]]
name = "frontend_spa"
path = "src/bin/frontend_spa/main.rs"
required-features = ["frontend"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4.2"
actix-files = "0.6"
futures-util = "0.3"
serde = "1"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "uuid" ] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
sycamore = "0.8"
web-sys = { version = "0.3", features = [  ] }
# lazy_static = "1"
