[workspace]

members = [
    "types",
    "server-actix",
    "client/webapi",
    "client/sycamore",
]

default-members = [
    "types",
    "server-actix",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Roman Melnyk <kromgart@gmail.com>"]

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
