[package]
name = "plebiscite-server-actix"

version.workspace = true
edition.workspace = true
authors.workspace = true


[[bin]]
name = "plebserv"
path = "src/main.rs"


[dependencies]
plebiscite-types = { path = "../types" }
actix-web = "4.3"
actix-files = "0.6"
futures-util = "0.3"
serde = "1"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "uuid" ] }

