[package]
name = "plebiscite-client-sycamore"

version.workspace = true
edition.workspace = true
authors.workspace = true



[[bin]]
name = "plebiscite-client-sycamore"
path = "src/main.rs"


[target.'cfg(target_arch = "wasm32")'.dependencies]

plebiscite-types = { path = "../../types" }
plebiscite-client-webapi = { path = "../webapi" }

sycamore = { version = "0.8", features = [ "suspense" ] }
