[package]
name = "plebiscite-client-sycamore"

version.workspace = true
edition.workspace = true
authors.workspace = true



[[bin]]
name = "plebiscite-client-sycamore"
path = "src/main.rs"


[target.'cfg(target_arch = "wasm32")'.dependencies]

plebiscite-types = { path = "../../types", features = [ "wasm" ] }
plebiscite-client-webapi = { path = "../webapi" }

sycamore = { version = "0.9.0-beta.1", features = [ "suspense" ] }
